--- a/_config.yml
+++ b/_config.yml
@@ -111,11 +111,11 @@ analytics:
 
 # Site Author
 author:
-  name: "Your Name"
+  name: "PachyuChepe"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "I am an **amazing** person."
-  location: "Somewhere"
-  email:
+  bio: "Ukkikki !"
+  location: "South Korea"
+  email: "pachyuchepe@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
